# DFT-scripts

./: LICENSE  README.md
CPYtools-C++/: CMakeLists.txt  README.txt
CPYtools-C++/src/: libextfmt_python.cpp
CRYSTAL/: Crystal_output_for_Tool.ipynb  README.md  equation_of_state.ipynb  freq_output.py
data_process/: bond_stat.py  corr_coeff.py  curve_analy.py  eigs_read.py  mulliken.py  neighbor_averaged_spin.py  poav_analy.py
file_IO/: crysgui2poscar.sh  spreadsheet_editor.py
visualization/: colormap.py  latt_plot.py
